force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <description>for srNetwork to schedule hours per day</description>
    <label>Schedule</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Schedule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>