force-app/main/default/objects/Schedule__c/fields/Administrative_Hours__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Hours__c</fullName>
    <description>Populates this field if the Case is an 'administrative' case</description>
    <formula>IF( Case__r.Administrative_for_CM__c = True,  Hours__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrative Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>