force-app/main/default/objects/Schedule__c/fields/Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Hours__c</fullName>
    <description>For reporting purposes. To calculate the capacity per person, per day.</description>
    <formula>8-Administrative_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>