force-app/main/default/objects/Schedule__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date the hours are worked</description>
    <inlineHelpText>Date the hours are worked</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>