force-app/main/default/objects/Schedule__c/fields/duplicateScheduleCheck__c.field-meta.xml
<CustomField>
    <fullName>duplicateScheduleCheck__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>populated via a workflow</description>
    <label>duplicateScheduleCheck</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>