force-app/main/default/objects/Schedule__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Total anticipated hours on this day</description>
    <inlineHelpText>Total anticipated hours on this day</inlineHelpText>
    <label>Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>