force-app/main/default/objects/Schedule__c/fields/Requested_Service__c.field-meta.xml
<CustomField>
    <fullName>Requested_Service__c</fullName>
    <description>For Reporting purposes</description>
    <formula>Case__r.Requested_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Service</label>
    <type>Text</type>
</CustomField>