force-app/main/default/objects/Schedule__c/fields/srNetwork_Team__c.field-meta.xml
<CustomField>
    <fullName>srNetwork_Team__c</fullName>
    <description>For Reporting purposes</description>
    <formula>TEXT(OwnerId__r.srNetwork_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>srNetwork Team</label>
    <type>Text</type>
</CustomField>