force-app/main/default/objects/Schedule__c/fields/User_Region__c.field-meta.xml
<CustomField>
    <fullName>User_Region__c</fullName>
    <description>For 'Schedule' reporting purposes</description>
    <formula>OwnerId__r.Sales_Geography__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Region</label>
    <type>Text</type>
</CustomField>