force-app/main/default/objects/Schedule__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <description>Populates if the Case is not 'administrative'</description>
    <formula>IF (  Case__r.Administrative_for_CM__c = False,  Hours__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>