force-app/main/default/objects/Schedule__c/validationRules/Schedule_Hours_less_than_24.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Hours_less_than_24</fullName>
    <active>true</active>
    <description>ensures the schedule__c.hours__c field is between 0 and 24</description>
    <errorConditionFormula>OR( Hours__c &lt; 0 , Hours__c > 24 )</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>Please enter number of hours between 0 and 24</errorMessage>
</ValidationRule>